Add financing assumptions with down payment, total cost, and amount to finance. And fix the journeys to actually test stuff.

--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -4,7 +4,7 @@
     <div>{{persistenceState}}</div>
   </div>
   <div class="row">
-    <div class="col-md-12 subsection-header">Financing and Income Assumptions</div>
+    <div class="col-md-24 subsection-header">Financing and Income Assumptions</div>
   </div>
   <div class="col-md-6">
     <valuation-inputs></valuation-inputs>
@@ -14,5 +14,8 @@
   </div>
   <div class="col-md-6">
     <cost-and-revenue-assumptions></cost-and-revenue-assumptions>
+  </div>
+  <div class="col-md-6">
+    <financing-assumptions></financing-assumptions>
   </div>
 </div>
