--- a/public/investment_properties_pages/valuation_inputs.html
+++ b/public/investment_properties_pages/valuation_inputs.html
@@ -34,8 +34,8 @@
     <span class="col-md-18">Number of Units:</span>
     <input class="col-md-6"
            type="text"
+           format="number"
            name="number-of-units-input"
-           format="currency"
            ng-model="rental_property.financing_and_income_assumption.number_of_units"/>
   </div>
   <div id="average-monthly-rent" class="row">
