--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -18,4 +18,7 @@
   <div class="col-md-6">
     <financing-assumptions></financing-assumptions>
   </div>
+  <div class="col-md-6">
+    <key-rent-ratios></key-rent-ratios>
+  </div>
 </div>
