Add area per unit to key rent ratios

--- a/public/investment_properties_pages/key_rent_ratios.html
+++ b/public/investment_properties_pages/key_rent_ratios.html
@@ -6,4 +6,8 @@
     <span class="col-md-18">Total Square Feet</span>
     <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.total_square_feet | number:0}}</span>
   </div>
+  <div id="avg-square-feet-per-unit" class="row">
+    <span class="col-md-18">Avg Sq Ft/Unit</span>
+    <span class="col-md-6 align-right">{{avg_sq_ft_per_unit | number:2}}</span>
+  </div>
 </div>
