--- a/public/investment_properties_pages/valuation_inputs.html
+++ b/public/investment_properties_pages/valuation_inputs.html
@@ -28,7 +28,11 @@
   </div>
   <div id="total-square-feet" class="row">
     <span class="col-md-18">Total Square Feet:</span>
-    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.total_square_feet | number}}</span>
+    <input class="col-md-6"
+           type="text"
+           name="total-square-feet-input"
+           format="number"
+           ng-model="rental_property.financing_and_income_assumption.total_square_feet"/>
   </div>
   <div id="number-of-units" class="row">
     <span class="col-md-18">Number of Units:</span>
