--- a/public/investment_properties_pages/cost_and_revenue_assumptions.html
+++ b/public/investment_properties_pages/cost_and_revenue_assumptions.html
@@ -16,19 +16,20 @@
   </div>
   <div class="row">
     <span class="col-md-18">Closing Costs</span>
-    <span class="col-md-6 align-right">{{total_closing_costs | currency}}</span>
+    <span class="col-md-6 align-right add-border-bottom">{{total_closing_costs | currency}}</span>
   </div>
   <div class="row">
     <span class="col-md-18">Total Cost</span>
     <span class="col-md-6 align-right">{{total_cost | currency}}</span>
   </div>
+  <br>
   <div class="row">
     <span class="col-md-18">Number of Units</span>
     <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.number_of_units | number:0}}</span>
   </div>
   <div class="row">
     <span class="col-md-18">Average Monthly Rent</span>
-    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.average_monthly_rent_per_unit | currency}}</span>
+    <span class="col-md-6 align-right add-border-bottom">{{rental_property.financing_and_income_assumption.average_monthly_rent_per_unit | currency}}</span>
   </div>
   <div class="row">
     <span class="col-md-18">Gross Monthly Rent</span>
@@ -36,7 +37,7 @@
   </div>
   <div class="row">
     <span class="col-md-18">Other Income</span>
-    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.other_monthly_income | currency}}</span>
+    <span class="col-md-6 align-right add-border-bottom">{{rental_property.financing_and_income_assumption.other_monthly_income | currency}}</span>
   </div>
   <div class="row">
     <span class="col-md-18">Total Gross Monthly Income</span>
