Remove decimals from amortization period in years

--- a/public/investment_properties_pages/financing_assumptions.html
+++ b/public/investment_properties_pages/financing_assumptions.html
@@ -30,7 +30,7 @@
   </div>
   <div class="row" id="amortization-period">
     <span class="col-md-12">Amortization Period</span>
-    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.amortization_period_in_years}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.amortization_period_in_years | number:0}}</span>
     <span class="col-md-6 align-right">{{amortization_period_in_months}}</span>
   </div>
   <div class="row" id="loan-payment">
