Add rent per sq ft to key rent ratios

--- a/public/investment_properties_pages/key_rent_ratios.html
+++ b/public/investment_properties_pages/key_rent_ratios.html
@@ -10,4 +10,8 @@
     <span class="col-md-18">Avg Sq Ft/Unit</span>
     <span class="col-md-6 align-right">{{avg_sq_ft_per_unit | number:2}}</span>
   </div>
+  <div id="avg-rent-per-sq-ft" class="row">
+    <span class="col-md-18">Avg Rent/Sq Ft</span>
+    <span class="col-md-6 align-right">{{avg_rent_per_sq_ft | currency}}</span>
+  </div>
 </div>
