--- a/public/investment_properties_pages/key_rent_ratios.html
+++ b/public/investment_properties_pages/key_rent_ratios.html
@@ -14,4 +14,8 @@
     <span class="col-md-18">Avg Rent/Sq Ft</span>
     <span class="col-md-6 align-right">{{avg_rent_per_sq_ft | currency}}</span>
   </div>
+  <div id="total-cost-per-sq-ft" class="row">
+    <span class="col-md-18">Total Cost/Sq Ft</span>
+    <span class="col-md-6 align-right">{{total_cost_per_sq_ft | currency}}</span>
+  </div>
 </div>
