Add cost per unit to key ratios

--- a/public/investment_properties_pages/key_rent_ratios.html
+++ b/public/investment_properties_pages/key_rent_ratios.html
@@ -18,4 +18,8 @@
     <span class="col-md-18">Total Cost/Sq Ft</span>
     <span class="col-md-6 align-right">{{total_cost_per_sq_ft | currency}}</span>
   </div>
+  <div id="total-cost-per-unit" class="row">
+    <span class="col-md-18">Cost per Unit</span>
+    <span class="col-md-6 align-right">{{cost_per_unit | currency}}</span>
+  </div>
 </div>
