--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -12,13 +12,22 @@
     <closing-costs-inputs></closing-costs-inputs>
     <income-and-cost-projections></income-and-cost-projections>
   </div>
-  <div class="col-md-6">
-    <cost-and-revenue-assumptions></cost-and-revenue-assumptions>
-  </div>
-  <div class="col-md-6">
-    <financing-assumptions></financing-assumptions>
-  </div>
-  <div class="col-md-6">
-    <key-rent-ratios></key-rent-ratios>
+  <div class="col-md-18">
+    <div class="row">
+      <div class="col-md-8">
+        <cost-and-revenue-assumptions></cost-and-revenue-assumptions>
+      </div>
+      <div class="col-md-8">
+        <financing-assumptions></financing-assumptions>
+      </div>
+      <div class="col-md-8">
+        <key-rent-ratios></key-rent-ratios>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-24">
+        <projections-header></projections-header>
+      </div>
+    </div>
   </div>
 </div>
