Add operating revenues

--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -27,6 +27,7 @@
     <div class="row">
       <div class="col-md-24">
         <projections-header></projections-header>
+        <operating-revenues></operating-revenues>
       </div>
     </div>
   </div>
