Make the 'actual monthly' header double height

--- a/public/investment_properties_pages/operating_revenues.html
+++ b/public/investment_properties_pages/operating_revenues.html
@@ -1,42 +1,43 @@
 <div id="operating-revenues">
   <div>
     <div class="row">
+      <div class="col-md-2 col-md-offset-7 subsection-header align-center double-height">Actual Monthly</div>
       <div class="col-md-15 col-md-offset-9 subsection-header">Projected</div>
     </div>
     <div class="row">
       <div class="col-md-6 subsection-header">Operating Revenues</div>
-      <div class="col-md-3"></div>
-      <div class="col-md-3 subsection-header align-right">Actual Monthly</div>
-      <div class="col-md-2 subsection-header align-right">Year 1</div>
-      <div class="col-md-2 subsection-header align-right">Year 2</div>
-      <div class="col-md-2 subsection-header align-right">Year 3</div>
-      <div class="col-md-2 subsection-header align-right">Year 4</div>
-      <div class="col-md-2 subsection-header align-right">Year 5</div>
+      <div class="col-md-1"></div>
+      <div class="col-md-2 align-center"></div>
+      <div class="col-md-3 subsection-header align-center">Year 1</div>
+      <div class="col-md-3 subsection-header align-center">Year 2</div>
+      <div class="col-md-3 subsection-header align-center">Year 3</div>
+      <div class="col-md-3 subsection-header align-center">Year 4</div>
+      <div class="col-md-3 subsection-header align-center">Year 5</div>
     </div>
     <div class="row">
       <div class="col-md-6">Gross Scheduled Rent Income</div>
-      <div class="col-md-3"></div>
-      <div class="col-md-3 align-right">{{monthly_gross_scheduled_rent_income | currency:"$":0}}</div>
+      <div class="col-md-1"></div>
+      <div class="col-md-2 align-right">{{monthly_gross_scheduled_rent_income | currency:"$":0}}</div>
     </div>
     <div class="row">
       <div class="col-md-6">Vacancy Rate</div>
-      <div class="col-md-3"></div>
-      <div class="col-md-3 align-right add-border-bottom">{{vacancy | currency:"$":0}}</div>
+      <div class="col-md-1"></div>
+      <div class="col-md-2 align-right add-border-bottom">{{vacancy | currency:"$":0}}</div>
     </div>
     <div class="row">
       <div class="col-md-6">Net Rental Income</div>
-      <div class="col-md-3"></div>
-      <div class="col-md-3 align-right">{{net_rental_income | currency:"$":0}}</div>
+      <div class="col-md-1"></div>
+      <div class="col-md-2 align-right">{{net_rental_income | currency:"$":0}}</div>
     </div>
     <div class="row">
       <div class="col-md-6">Other Income</div>
-      <div class="col-md-3"></div>
-      <div class="col-md-3 align-right add-border-bottom">{{other_income | currency:"$":0}}</div>
+      <div class="col-md-1"></div>
+      <div class="col-md-2 align-right add-border-bottom">{{other_income | currency:"$":0}}</div>
     </div>
     <div class="row">
       <div class="col-md-6">Gross Income</div>
-      <div class="col-md-3"></div>
-      <div class="col-md-3 align-right">{{gross_income | currency:"$":0}}</div>
+      <div class="col-md-1"></div>
+      <div class="col-md-2 align-right">{{gross_income | currency:"$":0}}</div>
     </div>
   </div>
 </div>
