--- a/public/investment_properties_pages/operating_revenues.html
+++ b/public/investment_properties_pages/operating_revenues.html
@@ -36,6 +36,7 @@
       <div class="col-md-6">Other Income</div>
       <div class="col-md-1"></div>
       <div class="col-md-2 align-right add-border-bottom">{{other_income | currency:"$":0}}</div>
+      <div class="col-md-3 align-right" ng-repeat="income in projected_other_incomes track by $index">{{income | currency:"$":0}}</div>
     </div>
     <div class="row">
       <div class="col-md-6">Gross Income</div>
