--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -7,7 +7,7 @@
     <div class="col-md-24 subsection-header">Financing and Income Assumptions</div>
   </div>
   <div class="col-md-6">
-    <valuation-inputs></valuation-inputs>
+    <property-and-loan-information></property-and-loan-information>
     <operating-expenses-inputs></operating-expenses-inputs>
     <income-and-cost-projections></income-and-cost-projections>
     <closing-costs-inputs>< /closing-costs-inputs>
