--- a/public/investment_properties_pages/property_and_loan_information.html
+++ b/public/investment_properties_pages/property_and_loan_information.html
@@ -1,4 +1,4 @@
-<div id="valuation-inputs">
+<div id="property-and-loan-information">
   <div class="row">
     <div class="col-md-24 subsection-header">Inputs</div>
   </div>
