--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -28,6 +28,7 @@
       <div class="col-md-24">
         <projections-header></projections-header>
         <operating-revenues></operating-revenues>
+        <operating-expenses></operating-expenses>
       </div>
     </div>
   </div>
