--- a/public/investment_properties_pages/operating_expenses.html
+++ b/public/investment_properties_pages/operating_expenses.html
@@ -14,4 +14,10 @@
     <div class="col-md-2 align-right">{{monthly_property_management_fees | currency:"$":2}}</div>
     <div class="col-md-3 align-right" ng-repeat="cost in annual_property_management_fees track by $index">{{cost | currency:"$":0}}</div>
   </div>
+  <div class="row">
+    <div class="col-md-5">Taxes</div>
+    <div class="col-md-2 align-right">{{monthly_taxes_percentage | percentage:4}}</div>
+    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.taxes | currency:"$":2}}</div>
+    <div class="col-md-3 align-right" ng-repeat="cost in annual_taxes track by $index">{{cost | currency:"$":0}}</div>
+  </div>
 </div>
