--- a/public/investment_properties_pages/operating_expenses.html
+++ b/public/investment_properties_pages/operating_expenses.html
@@ -20,4 +20,10 @@
     <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.taxes | currency:"$":2}}</div>
     <div class="col-md-3 align-right" ng-repeat="cost in annual_taxes track by $index">{{cost | currency:"$":0}}</div>
   </div>
+  <div class="row">
+    <div class="col-md-5">Insurance</div>
+    <div class="col-md-2 align-right">{{monthly_insurance_percentage | percentage:4}}</div>
+    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.insurance | currency:"$":2}}</div>
+    <div class="col-md-3 align-right" ng-repeat="cost in annual_insurance_costs track by $index">{{cost | currency:"$":0}}</div>
+  </div>
 </div>
