--- a/public/investment_properties_pages/operating_expenses.html
+++ b/public/investment_properties_pages/operating_expenses.html
@@ -32,4 +32,10 @@
     <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.salaries_and_wages | currency:"$":2}}</div>
     <div class="col-md-3 align-right" ng-repeat="cost in annual_salaries_and_wages track by $index">{{cost | currency:"$":0}}</div>
   </div>
+  <div class="row">
+    <div class="col-md-5">Utilities</div>
+    <div class="col-md-2 align-right">{{monthly_utilities_percentage | percentage:4}}</div>
+    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.utilities | currency:"$":2}}</div>
+    <div class="col-md-3 align-right" ng-repeat="cost in annual_utilities track by $index">{{cost | currency:"$":0}}</div>
+  </div>
 </div>
