--- a/public/investment_properties_pages/operating_expenses.html
+++ b/public/investment_properties_pages/operating_expenses.html
@@ -38,4 +38,10 @@
     <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.utilities | currency:"$":2}}</div>
     <div class="col-md-3 align-right" ng-repeat="cost in annual_utilities track by $index">{{cost | currency:"$":0}}</div>
   </div>
+  <div class="row">
+    <div class="col-md-5">Water and Sewer</div>
+    <div class="col-md-2 align-right">{{monthly_water_and_sewer_percentage | percentage:4}}</div>
+    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.water_and_sewer | currency:"$":2}}</div>
+    <div class="col-md-3 align-right" ng-repeat="cost in annual_water_and_sewer_costs track by $index">{{cost | currency:"$":0}}</div>
+  </div>
 </div>
