--- a/public/investment_properties_pages/operating_expenses.html
+++ b/public/investment_properties_pages/operating_expenses.html
@@ -56,4 +56,10 @@
     <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.professional_fees | currency:"$":2}}</div>
     <div class="col-md-3 align-right" ng-repeat="cost in annual_professional_fees_costs track by $index">{{cost | currency:"$":0}}</div>
   </div>
+  <div class="row">
+    <div class="col-md-5">Advertising</div>
+    <div class="col-md-2 align-right">{{monthly_advertising_fees_percentage | percentage:4}}</div>
+    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.advertising | currency:"$":2}}</div>
+    <div class="col-md-3 align-right" ng-repeat="cost in annual_advertising_fees track by $index">{{cost | currency:"$":0}}</div>
+  </div>
 </div>
