--- a/public/investment_properties_pages/operating_expenses.html
+++ b/public/investment_properties_pages/operating_expenses.html
@@ -62,4 +62,10 @@
     <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.advertising | currency:"$":2}}</div>
     <div class="col-md-3 align-right" ng-repeat="cost in annual_advertising_fees track by $index">{{cost | currency:"$":0}}</div>
   </div>
+  <div class="row">
+    <div class="col-md-5">Landscaping</div>
+    <div class="col-md-2 align-right">{{monthly_landscaping_fees_percentage | percentage:4}}</div>
+    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.landscaping | currency:"$":2}}</div>
+    <div class="col-md-3 align-right" ng-repeat="cost in annual_landscaping_fees track by $index">{{cost | currency:"$":0}}</div>
+  </div>
 </div>
