--- a/public/investment_properties_pages/operating_expenses.html
+++ b/public/investment_properties_pages/operating_expenses.html
@@ -74,4 +74,10 @@
     <div class="col-md-2 align-right">{{monthly_capex_cost | currency:"$":2}}</div>
     <div class="col-md-3 align-right" ng-repeat="cost in annual_capex_cost track by $index">{{cost | currency:"$":0}}</div>
   </div>
+  <div class="row">
+    <div class="col-md-5">Other</div>
+    <div class="col-md-2 align-right">{{monthly_other_expenses_percentage | percentage:4}}</div>
+    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.other_expenses | currency:"$":2}}</div>
+    <div class="col-md-3 align-right" ng-repeat="cost in annual_other_operating_expenses track by $index">{{cost | currency:"$":0}}</div>
+  </div>
 </div>
