--- a/public/investment_properties_pages/operating_expenses.html
+++ b/public/investment_properties_pages/operating_expenses.html
@@ -80,4 +80,10 @@
     <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.other_expenses | currency:"$":2}}</div>
     <div class="col-md-3 align-right" ng-repeat="cost in annual_other_operating_expenses track by $index">{{cost | currency:"$":0}}</div>
   </div>
+  <div class="row">
+    <div class="col-md-5">Total Operating Expenses</div>
+    <div class="col-md-2 align-right">{{total_operating_expenses_percentage | percentage:4}}</div>
+    <div class="col-md-2 align-right">{{total_operating_expenses | currency:"$":2}}</div>
+    <div class="col-md-3 align-right" ng-repeat="cost in total_annual_operating_expenses_projections track by $index">{{cost | currency:"$":0}}</div>
+  </div>
 </div>
