Move operating expenses to a directive

--- a/public/investment_properties_pages/operating_expenses.html
+++ b/public/investment_properties_pages/operating_expenses.html
@@ -2,88 +2,5 @@
   <div class="row">
     <div class="col-md-5 align-center subsection-header">Operating Expenses</div>
   </div>
-  <div class="row">
-    <div class="col-md-5">Repairs and Maintenance</div>
-    <div class="col-md-2 align-right">{{repairs_and_maintenance_percentage | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.repairs_and_maintenance | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in projected_annual_maintenance_costs track by $index">{{cost | currency:"$":0}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5">Property Management Fees</div>
-    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.property_management_fees | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{monthly_property_management_fees | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in annual_property_management_fees track by $index">{{cost | currency:"$":0}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5">Taxes</div>
-    <div class="col-md-2 align-right">{{monthly_taxes_percentage | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.taxes | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in annual_taxes track by $index">{{cost | currency:"$":0}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5">Insurance</div>
-    <div class="col-md-2 align-right">{{monthly_insurance_percentage | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.insurance | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in annual_insurance_costs track by $index">{{cost | currency:"$":0}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5">Salaries and Wages</div>
-    <div class="col-md-2 align-right">{{monthly_salaries_and_wages_percentage | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.salaries_and_wages | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in annual_salaries_and_wages track by $index">{{cost | currency:"$":0}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5">Utilities</div>
-    <div class="col-md-2 align-right">{{monthly_utilities_percentage | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.utilities | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in annual_utilities track by $index">{{cost | currency:"$":0}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5">Water and Sewer</div>
-    <div class="col-md-2 align-right">{{monthly_water_and_sewer_percentage | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.water_and_sewer | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in annual_water_and_sewer_costs track by $index">{{cost | currency:"$":0}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5">Trash Removal</div>
-    <div class="col-md-2 align-right">{{monthly_trash_removal_percentage | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.trash_removal | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in annual_trash_removal_costs track by $index">{{cost | currency:"$":0}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5">Professional Fees</div>
-    <div class="col-md-2 align-right">{{monthly_professional_fees_percentage | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.professional_fees | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in annual_professional_fees_costs track by $index">{{cost | currency:"$":0}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5">Advertising</div>
-    <div class="col-md-2 align-right">{{monthly_advertising_fees_percentage | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.advertising | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in annual_advertising_fees track by $index">{{cost | currency:"$":0}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5">Landscaping</div>
-    <div class="col-md-2 align-right">{{monthly_landscaping_fees_percentage | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.landscaping | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in annual_landscaping_fees track by $index">{{cost | currency:"$":0}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5">CapEx</div>
-    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.capex | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{monthly_capex_cost | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in annual_capex_cost track by $index">{{cost | currency:"$":0}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5">Other</div>
-    <div class="col-md-2 align-right">{{monthly_other_expenses_percentage | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.other_expenses | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in annual_other_operating_expenses track by $index">{{cost | currency:"$":0}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5">Total Operating Expenses</div>
-    <div class="col-md-2 align-right">{{total_operating_expenses_percentage | percentage:4}}</div>
-    <div class="col-md-2 align-right">{{total_operating_expenses | currency:"$":2}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cost in total_annual_operating_expenses_projections track by $index">{{cost | currency:"$":0}}</div>
-  </div>
+  <operating-expense expense="expense" ng-repeat="expense in expenses"></operating-expense>
 </div>
