Add building depreciation expenses and net operating income

--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -29,6 +29,7 @@
         <projections-header></projections-header>
         <operating-revenues></operating-revenues>
         <operating-expenses></operating-expenses>
+        <net-operating-income></net-operating-income>
       </div>
     </div>
   </div>
