Reorder columns of depreciation expenses - building

--- a/public/investment_properties_pages/net_operating_income.html
+++ b/public/investment_properties_pages/net_operating_income.html
@@ -6,13 +6,13 @@
     <div class="col-md-3 align-right" ng-repeat="income in net_annual_incomes track by $index">{{income | currency:'$':0}}</div>
   </div>
   <div class="row">
-    <div class="col-md-5 align-center subsection-header">Depreciation Expenses - Building</div>
+    <div class="col-md-5">Depreciation Expenses - Building</div>
     <div class="col-md-2"></div>
     <div class="col-md-2 align-right">{{monthly_building_depreciation | currency:'$':0}}</div>
-    <div class="col-md-2 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
-    <div class="col-md-2 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
-    <div class="col-md-2 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
-    <div class="col-md-2 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
-    <div class="col-md-2 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
   </div>
 </div>
