--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -30,6 +30,7 @@
         <operating-revenues></operating-revenues>
         <operating-expenses></operating-expenses>
         <net-operating-income></net-operating-income>
+        <cash-flow-from-operations></cash-flow-from-operations>
       </div>
     </div>
   </div>
