--- a/public/investment_properties_pages/cash_flow_from_operations.html
+++ b/public/investment_properties_pages/cash_flow_from_operations.html
@@ -1,7 +1,15 @@
 <div id="cash-flow-from-operations">
   <div class="row">
     <div class="col-md-5 align-center subsection-header">Cash Flow from Operations</div>
-    <div class="col-md-2 align-right">{{noi_percentage | percentage:2}}</div>
+  </div>
+  <div class="row">
+    <div class="col-md-5">Total Cash Available for Loan Servicing</div>
+    <div class="col-md-2"></div>
+    <div class="col-md-2 align-right">{{cash_available_for_loan_servicing | currency:'$':2}}</div>
+    <div class="col-md-3 align-right"
+         ng-repeat="cash in annual_cash_available_for_loan_servicing track by $index">
+      {{cash | currency:'$':0}}
+    </div>
   </div>
   <div class="row">
     <div class="col-md-5">Debt Service</div>
