Add interest on loan to net operating income

--- a/public/investment_properties_pages/net_operating_income.html
+++ b/public/investment_properties_pages/net_operating_income.html
@@ -6,6 +6,12 @@
     <div class="col-md-3 align-right" ng-repeat="income in net_annual_incomes track by $index">{{income | currency:'$':0}}</div>
   </div>
   <div class="row">
+    <div class="col-md-5">Interest on Loan</div>
+    <div class="col-md-2 align-right">{{monthly_interest_on_loan_percentage | percentage:1}}</div>
+    <div class="col-md-2 align-right">{{monthly_interest_on_loan | currency}}</div>
+    <div class="col-md-3 align-right" ng-repeat="interest_payment in annual_interest_on_loan track by $index">{{interest_payment | currency}}</div>
+  </div>
+  <div class="row">
     <div class="col-md-5">Depreciation Expenses - Building</div>
     <div class="col-md-2"></div>
     <div class="col-md-2 align-right">{{monthly_building_depreciation | currency:'$':0}}</div>
