Add monthly and annual cf/debt servicing ratio to cash flow section

--- a/public/investment_properties_pages/net_operating_income.html
+++ b/public/investment_properties_pages/net_operating_income.html
@@ -1,4 +1,4 @@
-<div id="net-operating-income">
+<div id="net-operating-income" class="top-padded">
   <div class="row">
     <div class="col-md-5 align-center subsection-header">Net Operating Income</div>
     <div class="col-md-2 align-right">{{noi_percentage | percentage:2}}</div>
