--- a/public/investment_properties_pages/operating_revenues.html
+++ b/public/investment_properties_pages/operating_revenues.html
@@ -1,8 +1,8 @@
-<div id="operating-revenues">
+<div id="operating-revenues" class="top-padded">
   <div>
     <div class="row">
       <div class="col-md-2 col-md-offset-7 subsection-header align-center double-height">Actual Monthly</div>
-      <div class="col-md-25 col-md-offset-9 subsection-header">Projected</div>
+      <div class="col-md-25 col-md-offset-9 subsection-header no-bottom-border">Projected</div>
     </div>
     <div class="row">
       <div class="col-md-5 subsection-header">Operating Revenues</div>
