--- a/public/investment_properties_pages/cash_flow_from_operations.html
+++ b/public/investment_properties_pages/cash_flow_from_operations.html
@@ -1,4 +1,4 @@
-<div id="cash-flow-from-operations">
+<div id="cash-flow-from-operations" class="top-padded">
   <div class="row">
     <div class="col-md-5 align-center subsection-header">Cash Flow from Operations</div>
   </div>
@@ -40,5 +40,11 @@
     <div class="col-md-2"></div>
     <div class="col-md-2 align-right">{{monthly_total_return | currency:'$':0}}</div>
     <div class="col-md-3 align-right" ng-repeat="year in annual_total_returns track by $index">{{year | currency:'$':0}}</div>
+  </div>
+  <div class="row">
+    <div class="col-md-5">CF/Debt Servicing Ratio</div>
+    <div class="col-md-2"></div>
+    <div class="col-md-2 align-right">{{monthly_cf_debt_servicing_ratio | percentage:2}}</div>
+    <div class="col-md-3 align-right" ng-repeat="ratio in annual_cf_debt_servicing_ratio track by $index">{{ratio | percentage:2}}</div>
   </div>
 </div>
