--- a/public/investment_properties_pages/closing_costs.html
+++ b/public/investment_properties_pages/closing_costs.html
@@ -1,4 +1,4 @@
-<div id="closing-costs">
+<div id="closing-costs" class="top-padded">
   <div class="row">
     <div class="col-md-24 subsection-header">Closing Costs</div>
   </div>
