--- a/public/investment_properties_pages/income_and_cost_projections.html
+++ b/public/investment_properties_pages/income_and_cost_projections.html
@@ -1,4 +1,4 @@
-<div id="income-and-cost-projections">
+<div id="income-and-cost-projections" class="top-padded">
   <div class="row">
     <div class="col-md-24 subsection-header">Income and Cost Projections</div>
   </div>
