--- a/public/investment_properties_pages/operating_expenses.html
+++ b/public/investment_properties_pages/operating_expenses.html
@@ -1,4 +1,4 @@
-<div id="operating-expenses">
+<div id="operating-expenses" class="top-padded">
   <div class="row">
     <div class="col-md-5 align-center subsection-header">Operating Expenses</div>
   </div>
