--- a/public/investment_properties_pages/operating_income_inputs.html
+++ b/public/investment_properties_pages/operating_income_inputs.html
@@ -1,4 +1,4 @@
-<div id="operating-expenses-inputs">
+<div id="operating-expenses-inputs" class="top-padded">
   <div class="row">
     <div class="col-md-24 subsection-header">Monthly Operating Expenses</div>
   </div>
