--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -31,6 +31,7 @@
         <operating-expenses></operating-expenses>
         <net-operating-income></net-operating-income>
         <cash-flow-from-operations></cash-flow-from-operations>
+        <return-on-investment></return-on-investment>
       </div>
     </div>
   </div>
