Add cash roi to roi section

--- a/public/investment_properties_pages/return_on_investment.html
+++ b/public/investment_properties_pages/return_on_investment.html
@@ -5,4 +5,10 @@
     <div class="col-md-2 align-right"></div>
     <div class="col-md-3 align-right" ng-repeat="roi in noi_roi track by $index">{{roi | percentage:2}}</div>
   </div>
+  <div class="row">
+    <div class="col-md-5 align-center subsection-header">Cash ROI</div>
+    <div class="col-md-2 align-right"></div>
+    <div class="col-md-2 align-right"></div>
+    <div class="col-md-3 align-right" ng-repeat="roi in cash_roi track by $index">{{roi | percentage:2}}</div>
+  </div>
 </div>
