Add cap rate to key rent ratios

--- a/public/investment_properties_pages/key_rent_ratios.html
+++ b/public/investment_properties_pages/key_rent_ratios.html
@@ -22,4 +22,8 @@
     <span class="col-md-18">Cost per Unit</span>
     <span class="col-md-6 align-right">{{cost_per_unit | currency}}</span>
   </div>
+  <div id="cap-rate" class="row">
+    <span class="col-md-18">Capitalization Rate</span>
+    <span class="col-md-6 align-right">{{cap_rate | percentage:2}}</span>
+  </div>
 </div>
